force-app/main/default/objects/Reservation_File_KPI__c/Reservation_File_KPI__c.object-meta.xml
<CustomObject>
    <label>Reservation File KPI</label>
    <nameField>
        <label>Reservation File KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reservation File KPIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>