force-app/main/default/objects/Reservation_File_KPI__c/fields/Average_Length_of_Rent__c.field-meta.xml
<CustomField>
    <fullName>Average_Length_of_Rent__c</fullName>
    <label>Average Length of Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>