force-app/main/default/objects/Reservation_File_KPI__c/fields/Driver_Country__c.field-meta.xml
<CustomField>
    <fullName>Driver_Country__c</fullName>
    <label>Driver Country</label>
    <length>64</length>
    <type>Text</type>
</CustomField>