force-app/main/default/objects/Reservation_File_KPI__c/fields/Pickup_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Branch_Code__c</fullName>
    <label>Pickup Branch Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>