force-app/main/default/objects/Reservation_File_KPI__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <length>64</length>
    <type>Text</type>
</CustomField>