force-app/main/default/objects/Reservation_File_KPI__c/fields/Rate_Segment__c.field-meta.xml
<CustomField>
    <fullName>Rate_Segment__c</fullName>
    <label>Rate Segment</label>
    <length>64</length>
    <type>Text</type>
</CustomField>