force-app/main/default/objects/Reservation_File_KPI__c/fields/Reservation_Status__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Status__c</fullName>
    <label>Reservation Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>