force-app/main/default/objects/Reservation_File_KPI__c/fields/Revenue_LC__c.field-meta.xml
<CustomField>
    <fullName>Revenue_LC__c</fullName>
    <label>Revenue (LC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>