force-app/main/default/objects/Reservation_File_KPI__c/fields/Vehicle_Class__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Class__c</fullName>
    <label>Vehicle Class</label>
    <length>64</length>
    <type>Text</type>
</CustomField>